2007-07-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi: Remove Front-Cover and Back-Cover Texts,
	this manual is not printed by the FSF.

2007-07-16  Alexandre Duret-Lutz  <adl@gnu.org>

	* NEWS: Clarify that COPYING files are not updated.

2007-07-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi: New Back-Cover Text.
	Report by Karl Berry.

2007-07-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* aclocal.in (version): Fix output to match GCS requirements.
	* automake.in (version): Likewise.
	Report by Eric Blake.

	* COPYING, lib/COPYING: Update to GPLv3.  All uses changed.
	* NEWS: Update.

2007-06-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/gnupload: Fix shell portability issues with for loops.
	Report by Karl Berry.

2007-06-23  Paul Eggert  <eggert@cs.ucla.edu>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* aclocal.in (write_aclocal): Warn about autoconf
	incompatibilities instead of making them fatal.
	* tests/missing4.test: Adjust.
	* NEWS: Update.
	Problem reported by Bruno Haible in
	<http://lists.gnu.org/archive/html/bug-automake/2007-06/msg00010.html>.

2007-05-03  Stepan Kasal  <kasal@ucw.cz>

	* doc/automake.texi, lib/Automake/Rule.pm: Fix typos.
	* automake.in: Likewise.
	(am_primary_prefixes): Keep the intentional typo there.

2007-04-25  Eric Blake  <ebb9@byu.net>

	* doc/stamp-vti: Remove generated file from revision control.
	* doc/version.texi: Likewise.

2007-04-23  Reuben Thomas  <rrt@sc3d.org>  (tiny change)

	* doc/automake.texi (Python): Fix typo.

2007-03-30  Eric Blake  <ebb9@byu.net>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/mdate-sh (ls_command): Use -n when available to avoid
	problems with spaces in user/group names.
	* tests/mdate5.test: New test.
	* tests/Makefile.am: Adjust.

2007-03-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* automake.in (handle_tests): Rewrite XFAIL_TESTS just like
	TESTS, appending $(EXEEXT), so that matching continues to work
	on w32.