@@ -87,6 +87,7 @@ Erik Lindahl		E.Lindahl@chem.rug.nl
 Esben Haabendal Soerensen bart@kom.aau.dk
 Ezra Peisach		epeisach@MED-XTAL.BU.EDU
 Flavien Astraud		flav42@yahoo.fr
+Francesco Salvestrini	salvestrini@gmail.com
 François Pinard		pinard@iro.umontreal.ca
 Fred Fish		fnf@ninemoons.com
 Ganesan Rajagopal	rganesan@novell.com
