@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2003, 2004  Free Software Foundation, Inc.
+# Copyright (C) 2003, 2004, 2007  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -85,7 +85,7 @@ $ACLOCAL
 $AUTOCONF
 $AUTOMAKE --add-missing --copy
 
-./configure
+./configure --prefix=`pwd`/_inst
 env LIBTOOLFLAGS=--silent $MAKE print >output 2>&1
 cat output
 grep '1BEG: libmod1.la mod2.la :END1' output
@@ -93,3 +93,12 @@ grep '2BEG: mod2.la :END2' output
 grep '3BEG: .*silent.*silent.* :END3' output
 test 2 -le `grep mod2_la_LIBTOOLFLAGS Makefile | wc -l`
 $MAKE
+
+env LIBTOOLFLAGS=--silent $MAKE install >output 2>&1
+cat output
+grep 'silent.*silent.*prg' output
+grep 'silent.*silent.*libmod1' output
+
+env LIBTOOLFLAGS=--silent $MAKE uninstall >output 2>&1
+cat output
+grep 'silent.*silent.*libmod1' output
