@@ -6,6 +6,11 @@ New in 1.10a:
     (and new in Automake 1.10) is degraded to a warning.  This helps
     in the common case where the Autoconf versions used are compatible.
 
+* Change to Libtool support:
+
+  - Libtool generic flags are now passed to the install and uninstall
+    modes as well.
+
 * Languages changes:
 
   - subdir-object mode works now with Fortran (F77, FC, preprocessed
