@@ -1,3 +1,15 @@
+2007-07-22  Francesco Salvestrini  <salvestrini@gmail.com>
+	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* lib/am/ltlib.am (install-%DIR%LTLIBRARIES)
+	(uninstall-%DIR%LTLIBRARIES): Use $(AM_LIBTOOLFLAGS) and
+	$(LIBTOOLFLAGS).
+	* lib/am/progs.am (install-%DIR%PROGRAMS)
+	(uninstall-%DIR%PROGRAMS): Likewise.
+	* tests/libtool7.test: Update test for `install' and
+	`uninstall' cases.
+	* NEWS, THANKS: Update.
+
 2007-07-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* doc/automake.texi: Remove Front-Cover and Back-Cover Texts,
